<resources>
    <string name="app_name">Finder</string>
    <string name="usernameph">Username</string>
    <string name="emailph">Email</string>
    <string name="seeAllUsersBtn">All Users</string>
    <string name="viewFriendsBtn">Friends</string>

    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically, when wifi is avalible</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_radiusConnectionType">Radius lookup</string>

    <string name="pref_sync_list">pref_sync_list</string>
    <string name="pref_radius">pref_radius</string>
    <string name="pref_sync">pref_sync</string>

    <string name="notifications">Notifications</string>
    <string name="notif_on_new_message">On new message</string>
    <string name="notif_on_my_comment">On new comment</string>
    <string name="notif_on_new_rate">On new profile rating</string>
    <string name="notif_on_new_message_key">notif_on_new_message</string>
    <string name="notif_on_new_rate_key">notif_on_new_rate</string>
    <string name="notif_on_my_comment_key">notif_on_my_comment</string>
    <string name="notif_on_new_message_summ">Send you notifications when you receive a new message</string>
    <string name="notif_on_new_rate_summ">Send you notifications when someone rates your profile</string>
    <string name="notif_on_my_comment_summ">Send you notifications when someone leaves a comment on your profile</string>

    <string name="notif_on_sync_key">notif_on_sync</string>
    <string name="notif_on_sync_summ">Send you notifications about sync</string>
    <string name="notif_on_sync_title">Sync notifications</string>

    <string name="account">Account</string>
    <string name="account_switch_key">account_switch</string>
    <string name="account_switch_title">Switch Account</string>

    <string name="tab_all_users">ALL USERS</string>
    <string name="tab_followers">FOLLOWERS</string>
    <string name="tab_following">FOLLOWING</string>

    <string name="filter_popup">Filter users</string>

    <string name="google_maps_api_key">AIzaSyAM8SKt2WuKLLqvoj0gcMgwWogsSy_b9QM</string>
</resources>
