<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="Users lookup radius"
        android:key="radius_settings">

        <ListPreference
            android:dialogTitle="@string/pref_radiusConnectionType"
            android:entries="@array/pref_radiusConnectionTypes_entries"
            android:entryValues="@array/pref_radiusConnectionTypes_values"
            android:key="@string/pref_radius"
            android:title="@string/pref_radiusConnectionType"
            android:summary="%s"
            android:defaultValue="1"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notifications"
        android:key="notif_settings">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/notif_on_new_message_key"
            android:summary="@string/notif_on_new_message_summ"
            android:title="@string/notif_on_new_message" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/notif_on_my_comment_key"
            android:summary="@string/notif_on_my_comment_summ"
            android:title="@string/notif_on_my_comment" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/notif_on_new_rate_key"
            android:summary="@string/notif_on_new_rate_summ"
            android:title="@string/notif_on_new_rate" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/account"
        android:key="account_settings">

        <Preference
            android:defaultValue="false"
            android:key="@string/account_switch_key"
            android:title="@string/account_switch_title" />

    </PreferenceCategory>

</PreferenceScreen>