<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_popup"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:background="@color/grayLight"
    android:padding="5dp"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/close_rate"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/colorPrimary"
        android:text="X"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/circle_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_popup"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            >

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tab_following"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tab_followers"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tab_all_users" />
        </RadioGroup>

        <Button
            android:id="@+id/rate_submit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Submit"
            android:textColor="@color/white"
            android:background="@drawable/button_style_radius"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

</LinearLayout>